--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.example</groupId>
+  <groupId>org.talentTEK</groupId>
   <artifactId>CBDD_ONLINE_ONISTE_22</artifactId>
   <version>1.0-SNAPSHOT</version>
 
@@ -17,35 +17,32 @@
   </properties>
 
   <dependencies>
-    <!-- Selenium WebDriver -->
+
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>4.5.0</version>
+      <version>4.1.1</version>
     </dependency>
 
-    <!-- Cucumber - java -->
+
     <dependency>
       <groupId>io.cucumber</groupId>
       <artifactId>cucumber-java</artifactId>
-      <version>7.8.0</version>
+      <version>6.10.0</version>
     </dependency>
 
-    <!-- Cucumber - testng -->
     <dependency>
       <groupId>io.cucumber</groupId>
       <artifactId>cucumber-testng</artifactId>
-      <version>7.8.0</version>
+      <version>6.10.0</version>
     </dependency>
 
-    <!-- WebDriver Manager -->
     <dependency>
       <groupId>io.github.bonigarcia</groupId>
       <artifactId>webdrivermanager</artifactId>
-      <version>5.3.0</version>
+      <version>5.0.3</version>
     </dependency>
 
-    <!-- Java faker -->
     <dependency>
       <groupId>com.github.javafaker</groupId>
       <artifactId>javafaker</artifactId>
@@ -96,6 +93,4 @@
       </plugin>
     </plugins>
   </build>
-
-
 </project>
